# rust_basic_backend_example

./: Cargo.toml  example.env
src/: main.rs
src/auth/login/controller/: mod.rs  post_controller.rs
src/auth/login/model/: post_request.rs
src/auth/login/repository/: find_user_by_username.rs  mod.rs
src/auth/register/controller/: post_controller.rs
src/auth/register/model/: mod.rs  post_request.rs
src/auth/register/repository/: create_new_user.rs  mod.rs
src/base/model/: mod.rs  user_model.rs
src/base/model/response/: http_response.rs
src/util/: env_loader.rs  env_mapper.rs  mod.rs
