[package]
name = "valos_id_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = { version = "1.0.210", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.11", features = ["with-uuid-1", "with-chrono-0_4"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
